tests/invalid_inputs/sema/class_contains_itself.cpp
// test that the compiler catches cyclical inclusion of class within itself

struct S {
	S s;
};
